Navbar align-items fixed

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -14,6 +14,7 @@ body {
     background-color: #00BEB5;
     display: flex;
     justify-content: space-evenly;
+    align-items: center;
     color: white;
     font-size: 0.8rem;
     letter-spacing: 1.5px;
